2006-07-07  Jeremy Cribb <jcribb@email.unc.edu>
  * DACoperator.m: changed default board to daqtest.  fixed bug in the reporting of active channels.

2006-06-09  Jeremy Cribb <jcribb@email.unc.edu>
	* DACoperator.m: used try-catch when querying available DAq boards.  Now you can use the "virtual" board on machines that have no DAq boards installed at all.

2006-06-05  Jeremy Cribb <jcribb@email.unc.edu>
	* DACoperator.m: 
		- changed default number of repeats to zero.  this means the default behavior is to run the input signal once (i.e. no repeats).
		- added repeats to virtual DAC output
		- now reports starting time from clock (as close as possible to start)
	* zerodaq.m:
		- changed default DAq board.

2006-04-25  Jeremy Cribb <jcribb@email.unc.edu>
	* DACoperator.m: added newline to end of daqtest output.

2006-04-19	Kalpit Desai <kvdesai@email.unc.edu>
	* teststreaks.m: Removed the code that asked to save the data. It wasn't being used ever, and was annoying. Fixed documentation.

2005-10-03	Kalpit Desai <kvdesai@email.unc.edu>
	* teststreaks.m: Fixed old comments.
2005-10-03	Kalpit Desai <kvdesai@email.unc.edu>
	* teststreaks.m: Added utility for testing streaks on camera by moving MCL stage.
2005-09-24	Kalpit Desai <kvdesai@email.unc.edu>
	* ADCnoisechar.m: A utility to chracterize noise in the data acquisition path.
2005-09-16  Jeremy Cribb <jcribb@email.unc.edu>
	* zerodaq.m:  added.  with no arguments, it zeros daq boards.  With an argument it sets the board output to a DC value.

2005-02-18  Jeremy Cribb <jcribb@email.unc.edu>
	* DACoperator.m: made output plots more readable.

2005-02-05  Jeremy Cribb <jcribb@email.unc.edu>
	* DACoperator.m: fixed voltage-clipping functionality.  If you attempt to put a voltage outside of the prescribed range, DACoperator clips it.

2005-1-10  Kalpit Desai <kvdesai@cs.unc.edu>
	* added file stagenoisechar.m - a stand alone utility to characterize the noise on stage sensor outputs.
