@@ -1,3 +1,6 @@
+2006-07-25  Jeremy Cribb <jcribb@email.unc.edu>
+	* DACoperator.m: added decimation of signal sent to the daqtest plot.  Matlab gets ornery when plots exceed a million points or so.  A message is sent to text output warning of the decimation.
+
 2006-07-07  Jeremy Cribb <jcribb@email.unc.edu>
   * DACoperator.m: changed default board to daqtest.  fixed bug in the reporting of active channels.
 
